Implemented crypto logic